--- a/src/screens/marcadores/css/AgregarMarcador.module.css
+++ b/src/screens/marcadores/css/AgregarMarcador.module.css
@@ -38,6 +38,13 @@
     gap: 10px;
 }
 
+.checkboxColor {
+    accent-color: #4e8950;
+    width: 14px;
+    height: 18px;
+    cursor: pointer;
+}
+
 form p {
     margin-top: 15px;
     font-weight: 500;
