--- a/src/screens/solicitudes/css/AgregarSolicitud.module.css
+++ b/src/screens/solicitudes/css/AgregarSolicitud.module.css
@@ -38,10 +38,60 @@
     transform: scale(101%);
 }
 
+.checkboxLey {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    border-radius: 6px;
+    max-width: 500px;
+    margin-top: 15px;
+    align-items: center;
+}
+
+.checkboxLey input[type="checkbox"] {
+    margin-top: 5px;
+    width: 18px;
+    height: 18px;
+    accent-color: #4e8950;
+    cursor: pointer;
+}
+
+.labelLey {
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    font-size: 0.95rem;
+    color: #333;
+}
+
+.linkLey {
+    color: #333;
+    text-decoration: none;
+    font-weight: 800;
+}
+
+.linkLey:hover {
+    text-decoration: underline;
+}
+
+.descripcionLey {
+    font-size: 0.8rem;
+    color: #666;
+    font-style: italic;
+    margin-top: 3px;
+    line-height: 1.3;
+}
+
 .opt {
     display: flex;
-    align-items: center;
     gap: 10px;
+}
+
+.checkboxColor {
+    accent-color: #4e8950;
+    width: 14px;
+    height: 18px;
+    cursor: pointer;
 }
 
 form p {
