Ajuste estilos en Buscador y BotonEventos para mejorar la apariencia en modo nocturno; modificar estilos de imagen en loginUsuario.module.css.

--- a/src/screens/Login/loginUsuario.module.css
+++ b/src/screens/Login/loginUsuario.module.css
@@ -27,8 +27,6 @@
     width: 50%;
     opacity: 0.8;
     left: -20%;
-
-
 }
 
 .containerderecho {
@@ -46,7 +44,15 @@
 }
 
 .containeratras img {
-    width: 250px;
+    width: 200px;
+    height: auto;
+    max-width: 200px;
+    max-height: 90px;
+    object-fit: "contain";
+    aspect-ratio: "auto 3 / 1";
+    display: "block";
+    z-index: 10;
+    position: 'relative';
 }
 
 .containeratras .botonatras {
